--- a/packages/twenty-website/src/content/user-guide/home.mdx
+++ b/packages/twenty-website/src/content/user-guide/home.mdx
@@ -1,15 +1,8 @@
 ---
 title: Get started
-displayed_sidebar: userSidebar
-sidebar_class_name: hidden
-sidebar_position: 0
-sidebar_custom_props:
-  icon: TbUsers
-  isSidebarRoot: true
+position: 0
+icon: IconUsers
 ---
-
-
-# Welcome to Twenty's User Guide
 
 The purpose of this user guide is to help you learn how you can use Twenty to build the CRM you want. 
 
