--- a/packages/twenty-website/src/content/user-guide/integrations/connect-zapier.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/connect-zapier.mdx
@@ -1,15 +1,13 @@
 ---
-title: Connect Twenty and Zapier
-sidebar_position: 3
-sidebar_custom_props:
-  icon: TbBrandZapier
+title: Connect Zapier
+position: 3
+icon: IconBrandZapier
 ---
 
-:::caution
-
+<div class="warning">
 Twenty integration is currently being registered in the public Zapier repository, you may not find it until the publishing process is complete.
+</div>
 
-:::
 
 Sync Twenty with 3000+ apps using [Zapier](https://zapier.com/), and automate your work. Here's how you can connect Twenty to Zapier:
 
@@ -21,7 +19,7 @@ Sync Twenty with 3000+ apps using [Zapier](https://zapier.com/), and automate yo
 6. Enter your API key and click on 'Yes, Continue to Twenty.'
 
 <div style={{textAlign: 'center'}}>
-    <img src="/images/user-guide/connect-zapier.png" alt="Connect Twenty to Zapier" />
+    <img src="/images/user-guide/connect-zapier.png" alt="Connect Twenty to Zapier" style={{width:'100%', maxWidth:'800px'}}/>
 </div>
 
 You can now continue creating your automation!
