--- a/packages/twenty-website/src/content/user-guide/integrations/generating-api-keys.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/generating-api-keys.mdx
@@ -1,8 +1,7 @@
 ---
-title: Generating an API Key
-sidebar_position: 2
-sidebar_custom_props:
-  icon: TbApi
+title: API Keys
+position: 2
+icon: IconApi
 ---
 
 To generate an API key: 
@@ -14,11 +13,9 @@ To generate an API key:
 5. Hit save to see your API key. 
 6. Since the key is only visible once, make sure you store it somewhere safe. 
 
-:::caution Note
-
+<div class="warning">
 Since your API key contains sensitive information, you shouldn't share it with services you don't fully trust. If leaked, someone can use it maliciously. If you think your API key is no longer secure, make sure you disable it and generate a new one.  
-
-:::
+</div>
 
 
 ## Regenerating API key
