--- a/packages/twenty-website/src/content/user-guide/basics/tasks.mdx
+++ b/packages/twenty-website/src/content/user-guide/basics/tasks.mdx
@@ -1,11 +1,9 @@
 ---
 title: Tasks
-sidebar_position: 1
-sidebar_custom_props:
-  icon: TbChecklist
+position: 1
+icon: IconChecklist
 ---
 
-import PostImage from '../../../components/PostImage'
 
 You can find all the tasks from across your workspace in the <b>Tasks</b> window in your sidebar. You can also find a dedicated tab for Tasks on each record so you can add and edit tasks directly from each record. Alternatively, you can click on the `+` button on the top right of each record page and then click on <b>Task</b> to create a new task. 
 
