Fix docker install to have all projects (#3200)
* Fix docker install to have all projects

* Fix

* Fixes

--- a/packages/twenty-docs/docs/contributor/local-setup/docker-setup.mdx
+++ b/packages/twenty-docs/docs/contributor/local-setup/docker-setup.mdx
@@ -118,6 +118,10 @@ You should now have:
 
 Sign in using a seeded demo account `tim@apple.dev` (password: `Applecar2025`) to start using Twenty.
 
+## Step 6: Configure your IDE
+
+As you are executing the project inside a Docker container, you need to configure your IDE to use the same environment.
+You can find the instructions for your IDE in our [IDE setup](/contributor/local-setup/ide-setup) guide.
 
 ### Troubleshooting
 
