Add doc link in env file (#3277)

--- a/packages/twenty-docs/docs/start/self-hosting/environment-variables.mdx
+++ b/packages/twenty-docs/docs/start/self-hosting/environment-variables.mdx
@@ -1,5 +1,5 @@
 ---
-title: Enviroment Variables
+title: Environment Variables
 sidebar_position: 1
 sidebar_custom_props:
   icon: TbVariable
@@ -156,5 +156,5 @@ import TabItem from '@theme/TabItem';
 
 <OptionTable options={[
     ['DEBUG_MODE', 'true', 'Activate debug mode'],
-    ['SIGN_IN_PREFILLED', 'true', 'Prefill the Signin form for usage in a demo or dev enviroment'],
+    ['SIGN_IN_PREFILLED', 'true', 'Prefill the Signin form for usage in a demo or dev environment'],
     ]}></OptionTable>
