--- a/packages/twenty-docs/docs/start/self-hosting/environment-variables.mdx
+++ b/packages/twenty-docs/docs/start/self-hosting/environment-variables.mdx
@@ -56,6 +56,7 @@ import TabItem from '@theme/TabItem';
     ['AUTH_GOOGLE_CLIENT_SECRET', '', 'Google client secret'],
     ['AUTH_GOOGLE_CALLBACK_URL', '', 'Google auth callback'],
     ['FRONT_AUTH_CALLBACK_URL', 'http://localhost:3001/verify ', 'Callback used for Login page'],
+    ['IS_SIGN_UP_DISABLED', 'false', 'Disable sign-up'],
     ]}></OptionTable>
 
 ### Email
