Step 3: Set up PostgreSQL Database (#3370)

--- a/packages/twenty-docs/docs/contributor/local-setup/yarn-setup.mdx
+++ b/packages/twenty-docs/docs/contributor/local-setup/yarn-setup.mdx
@@ -109,8 +109,7 @@ All commands in the following steps should be run from the root of the project.
 
 
 ## Step 3: Set up PostgreSQL Database
-You need to have a PostgreSQL instance available to be able to use Twenty.
-You need to provision this database with a `twenty` user (password: `twenty`), a `default` database and a `test` database.
+To install PostgreSQL with a `default` and a `test` database, and provision these databases with a user `twenty` (password: `twenty`), follow the steps below:
 
 <Tabs>
 <TabItem value="linux" label="Linux" default>
