Fix relation creation bug + enable favorite for custom objects (#3392)
* Fix relation creation bug

* Fix vale CI

* Fix comment bug

--- a/packages/twenty-website/src/content/user-guide/basics/opportunities.mdx
+++ b/packages/twenty-website/src/content/user-guide/basics/opportunities.mdx
@@ -10,7 +10,7 @@ All opportunities are presented in a Kanban board, where each column represents 
 
 ## Add and delete stages
 
-You can add as many stages as you'd like to perfectly capture your entire workflow. To add a new stage, click on <b>Options</b> on the top right, choose <b>Stages</b>, and then click on `+ Add stage`. Name your stage and hit `Enter` to create it. Click on the name of the stage and then on on edit to change the stage's name and color.
+You can add as many stages as you'd like to perfectly capture your entire workflow. To add a new stage, click on <b>Options</b> on the top right, choose <b>Stages</b>, and then click on `+ Add stage`. Name your stage and hit `Enter` to create it. Click on the name of the stage and then on edit to change the stage's name and color.
 
 To delete a stage, click on the stage name or on the `⋮` icon that appears when you hover over a stage. Click on edit to open the menu and click on <b>Delete</b> at the bottom to permanently delete a stage. 
 
