Fix docker-compose commands (#3403)

--- a/packages/twenty-docs/docs/contributor/local-setup/docker-setup.mdx
+++ b/packages/twenty-docs/docs/contributor/local-setup/docker-setup.mdx
@@ -86,7 +86,7 @@ Before running the project, you need to initialize the database by running the m
 
 Start the containers:
 ```bash
-make docker-dev-up
+make docker-dev-start
 ```
 
 Setup database, run migrations, and seed:
