docs: resolve broken discord links (#3408)
* refactor: make search case-insensitive

* docs: resolved broken discord links

--- a/packages/twenty-docs/docs/contributor/local-setup/ide-setup.mdx
+++ b/packages/twenty-docs/docs/contributor/local-setup/ide-setup.mdx
@@ -51,4 +51,4 @@ If you stop your containers, you will need to restart them before opening the pr
 
 ## You are all set
 
-You are all set to start contributing to the project. If you have any questions, feel free to reach out to the team on [Discord](https://twenty.com/discord).
+You are all set to start contributing to the project. If you have any questions, feel free to reach out to the team on [Discord](https://discord.gg/cx5n4Jzs57).
