--- a/packages/twenty-docs/docs/contributor/local-setup/local-setup.mdx
+++ b/packages/twenty-docs/docs/contributor/local-setup/local-setup.mdx
@@ -17,7 +17,7 @@ Twenty aims for developer-friendliness, and your local installation should be up
 
 ## Discord
 
-If you have any questions or need help, you can join Twenty's [Discord](https://twenty.com/discord) server.
+If you have any questions or need help, you can join Twenty's [Discord](https://discord.gg/cx5n4Jzs57) server.
 
 ## MacOS and Linux users
 
