--- a/packages/twenty-docs/docs/start/bug-and-requests.mdx
+++ b/packages/twenty-docs/docs/start/bug-and-requests.mdx
@@ -8,7 +8,7 @@ sidebar_custom_props:
 ## Reporting Bugs
 To report a bug, please [create an issue on GitHub](https://github.com/twentyhq/twenty/issues/new).
 
-You can also ask for help on [Discord](https://twenty.com/discord).
+You can also ask for help on [Discord](https://discord.gg/cx5n4Jzs57).
 
 ## Feature Requests
 
