--- a/packages/twenty-docs/docs/start/self-hosting/environment-variables.mdx
+++ b/packages/twenty-docs/docs/start/self-hosting/environment-variables.mdx
@@ -62,6 +62,9 @@ import TabItem from '@theme/TabItem';
 ### Email
 
 <OptionTable options={[
+    ['EMAIL_FROM_ADDRESS', 'noreply@yourdomain.com', 'Global email From: header used to send emails'],
+    ['EMAIL_FROM_NAME', 'John from YourDomain', 'Global name From: header used to send emails'],
+    ['EMAIL_SYSTEM_ADDRESS', 'system@yourdomain.com', 'Email address used as a destination to send internal system notification'],
     ['EMAIL_DRIVER', 'logger', "Email driver: 'logger' (to log emails in console) or 'smtp'"],
     ['EMAIL_SMTP_HOST', '', 'Email Smtp Host'],
     ['EMAIL_SMTP_PORT', '', 'Email Smtp Port'],
@@ -126,7 +129,8 @@ import TabItem from '@theme/TabItem';
 
 <OptionTable options={[
     ['LOGGER_DRIVER', 'console', "The logging driver can be: 'console' or 'sentry'"],
-    ['LOG_LEVEL', 'error,warn', "The loglevels which are logged to the logging driver. Can include: 'log', 'warn', 'error'"],
+    ['LOG_LEVELS', 'error,warn', "The loglevels which are logged to the logging driver. Can include: 'log', 'warn', 'error'"],
+    ['EXCEPTION_HANDLER_DRIVER', 'sentry', "The exception handler driver can be: 'console' or 'sentry'"],
     ['SENTRY_DSN', 'https://xxx@xxx.ingest.sentry.io/xxx', 'The sentry logging endpoint used if sentry logging driver is selected'],
     ]}></OptionTable>
 
@@ -159,3 +163,10 @@ import TabItem from '@theme/TabItem';
     ['DEBUG_MODE', 'true', 'Activate debug mode'],
     ['SIGN_IN_PREFILLED', 'true', 'Prefill the Signin form for usage in a demo or dev environment'],
     ]}></OptionTable>
+
+### Workspace Cleaning
+
+<OptionTable options={[
+  ['WORKSPACE_INACTIVE_DAYS_BEFORE_NOTIFICATION', '', 'Number of inactive days before sending workspace deleting warning email'],
+  ['WORKSPACE_INACTIVE_DAYS_BEFORE_DELETION', '', 'Number of inactive days before deleting workspace'],
+  ]}></OptionTable>
