--- a/packages/twenty-docs/docs/contributor/frontend/best-practices.mdx
+++ b/packages/twenty-docs/docs/contributor/frontend/best-practices.mdx
@@ -268,7 +268,7 @@ Prop drilling, in the React context, refers to the practice of passing state var
 
 3. **Reduced Component Reusability**: A component receiving a lot of props solely for passing them down becomes less general-purpose and harder to reuse in different contexts.
 
-If you feel that you are using excessive prop drilling, see [state management best practices](/contributor/frontend/advanced/best-practices#state-management).
+If you feel that you are using excessive prop drilling, see [state management best practices](#state-management).
 
 ## Imports
 
