--- a/packages/twenty-docs/docs/start/local-setup/ide-setup.mdx
+++ b/packages/twenty-docs/docs/start/local-setup/ide-setup.mdx
@@ -6,7 +6,7 @@ sidebar_custom_props:
   icon: TbBrandVscode
 ---
 
-This section will help you set up your IDE for the project. If you haven't set up your development environment, please refer to the [local setup](/contributor/local-setup) section.
+This section will help you set up your IDE for the project. If you haven't set up your development environment, please refer to the [local setup](/start/local-setup) section.
 
 
 ## Visual Studio Code
@@ -37,7 +37,7 @@ You can use the recommended extensions for the project. You will find them in `.
 
 ### Step 4: (Docker only) Run VSCode in container
 
-If you are using a [Docker setup](/contributor/local-setup/docker-setup), you will need to run VSCode in the container. You can do that by opening the project, clicking on the `Remote Explorer` icon on the left sidebar and then clicking on `Attach in New window` on `dev-twenty-dev` container.
+If you are using a [Docker setup](/start/local-setup/docker-setup), you will need to run VSCode in the container. You can do that by opening the project, clicking on the `Remote Explorer` icon on the left sidebar and then clicking on `Attach in New window` on `dev-twenty-dev` container.
 
 <div style={{textAlign: 'center'}}>
     <img src="/img/contributor/ide-start-dev-container.png" alt="Visual Studio Code: Open in container" width="90%" />
