--- a/packages/twenty-docs/docs/index.mdx
+++ b/packages/twenty-docs/docs/index.mdx
@@ -3,36 +3,24 @@ id: homepage
 sidebar_position: 0
 sidebar_class_name: display-none
 title: Welcome
+hide_title: true
+hide_table_of_contents: true
 custom_edit_url: null
+pagination_next: null
 ---
 import ThemedImage from '@theme/ThemedImage';
-import Footer from '@theme/Footer'
-
-Twenty is an Open Source CRM that provides flexibility, tailored to your business needs. It helps you break free from vendor lock-in and limitations, and provides the tools you need to harness the full potential of your data while ensuring a sleek and effortlessly intuitive design that teams will love to use.  
-<ThemedImage sources={{light: "../img/light-doc-preview.png", dark:"../img/dark-doc-preview.png"}} style={{width:'100%', maxWidth:'800px'}}/>
 
 
-## Idea Behind Twenty
-We’ve spent thousands of hours grappling with traditional CRMs like Pipedrive and Salesforce to align them with our business needs, only to end up frustrated—customizations are complex and the closed ecosystems of these platforms can feel restrictive.
+Twenty is a CRM designed to fit your unique business needs.  
+It was brought to life by a passionate community that cares about quality and precision in engineering.
 
-The need for a CRM solution that empowers rather than constrains was clear, which inspired us to create Twenty. It's a next-generation open-source CRM that offers you the flexibility to shape it according to your business objectives and meet your team’s unique needs. Twenty is full of powerful features to give you full control and help you win more deals. 
-
-## Getting started
-
-There are three ways for you to get started with Twenty:
-- **Cloud:** The fastest and easiest way to try the app (it's free)
-- **Local:** If you're a developer and would like to experiment or contribute to the app
-- **Self-hosting:** If you want greater control over your data and want to run the app on your own server
-
-See the [Getting Started](./start/getting-started/) guide to learn more.
-
-## Contributing
-
-Contributions are what makes the open source community such a great place.  
-
-Code contributions through pull request are most welcome. See the [local setup guide](../contributor/local-setup) to get started.
-
-You can also contribute by creating an issue to report a bug you've spotted, joining discussions or writing documentation.
+There are three different ways to get started:
+- **Managed Cloud:** The fastest and easiest way to try the app 
+- **Loca Setup:** If you're a developer and would like to contribute to the app
+- **Self-hosting:** If you know how to run a server and want to host the app yourself
 
 
-<Footer/>
+Once you're setup, you can check the "Extending" or "Contributing" section to start building.
+  
+<ThemedImage sources={{light: "../img/light-doc-preview.png", dark:"../img/dark-doc-preview.png"}} style={{width:'100%', maxWidth:'700px'}}/>
+
