Add rate limiting in the server using built in Nest.js capability (#3566)
* Add rate limiting in the server using built in Nest.js capability

* Generatekey based on ip address when an http request is sent

* Update env var types to number for ttl and limit

* Remove unused env variables

* Use getRequest utility function

* fix: remove dist from path

* fix: adding .env variables

* fix: remove unused functions

* feat: throttler plugin

* Fix according to review

---------

Co-authored-by: Jérémy Magrin <jeremy.magrin@gmail.com>
Co-authored-by: Charles Bochet <charles@twenty.com>

--- a/packages/twenty-docs/docs/start/self-hosting/self-hosting.mdx
+++ b/packages/twenty-docs/docs/start/self-hosting/self-hosting.mdx
@@ -43,6 +43,12 @@ import TabItem from '@theme/TabItem';
     ['PORT', '3000', 'Port'],
     ]}></OptionTable>
 
+### Security
+
+<OptionTable options={[
+    ['API_RATE_LIMITING_TTL', '100', 'API rate limiting time window'],
+    ['API_RATE_LIMITING_LIMIT', '200', 'API rate limiting max requests'],
+    ]}></OptionTable>
 ### Tokens
 
 <OptionTable options={[
