Updated the docs typo (#3987)

--- a/packages/twenty-docs/docs/index.mdx
+++ b/packages/twenty-docs/docs/index.mdx
@@ -16,8 +16,8 @@ It was brought to life by a passionate community that cares about quality and pr
 
 There are three different ways to get started:
 - **Managed Cloud:** The fastest and easiest way to try the app 
-- **Loca Setup:** If you're a developer and would like to contribute to the app
-- **Self-hosting:** If you know how to run a server and want to host the app yourself
+- **Local Setup:** If you're a developer and would like to contribute to the app
+- **Self-Hosting:** If you know how to run a server and want to host the app yourself
 
 
 Once you're setup, you can check the "Extending" or "Contributing" section to start building.
