WIP: New User Guide (#3984)
* initial commit

* Theme setup on twenty-website package

* Left bar, Content done

* Content added, useDeviceType hook added

* useDeviceType file renamed

* Responsiveness introduced

* Mobile responsiveness fix

* TOC layout

* PR fixes

* PR changes 2

* PR changes #3

--- a/packages/twenty-website/src/content/user-guide/what-is-twenty.mdx
+++ b/packages/twenty-website/src/content/user-guide/what-is-twenty.mdx
@@ -1,9 +1,12 @@
 ---
-title: Get started
+title: What is Twenty
 position: 0
 icon: IconUsers
-info: This is homepage
+info: A brief on Twenty's commitment to reshaping CRM with Open Source
+image: /images/user-guide/home/what-is-twenty.png
 ---
+
+## What is Twenty
 
 The purpose of this user guide is to help you learn how you can use Twenty to build the CRM you want. 
 
