Update demo link (#4483)
* Update demo link

* Update doc

---------

Co-authored-by: Thomas Trompette <thomast@twenty.com>

--- a/packages/twenty-docs/docs/start/cloud.mdx
+++ b/packages/twenty-docs/docs/start/cloud.mdx
@@ -9,7 +9,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 
-The easiest way to try the app is to sign up on [app.twenty.com](https://app.twenty.com).
+The easiest way to try the app is to sign up on [demo.twenty.com](https://demo.twenty.com).
 
 We offer a free trial but require a credit-card to signup.
 
