--- a/packages/twenty-docs/docs/start/self-hosting/1-click-deploy.mdx
+++ b/packages/twenty-docs/docs/start/self-hosting/1-click-deploy.mdx
@@ -11,6 +11,10 @@ sidebar_custom_props:
 
 [![Deploy to Render](https://render.com/images/deploy-to-render-button.svg)](https://render.com/deploy?repo=https://github.com/twentyhq/twenty)
 
+## RepoCloud
+
+[![Deploy on RepoCloud](https://d16t0pc4846x52.cloudfront.net/deploy.png)](https://repocloud.io/details/?app_id=259)
+
 ## Digital Ocean
 
 Community contribution are welcome!
