--- a/packages/twenty-website/src/content/releases/0.3.0.mdx
+++ b/packages/twenty-website/src/content/releases/0.3.0.mdx
@@ -5,6 +5,6 @@ Date: Feb 3rd 2024
 
 # Rating field
 
-The new Rating field represents a numeric value from 0 to 5, it can be useful for various use-cases such as scoring leads.
+The new Rating field represents a numeric value from zero to five, it can be useful for various use-cases such as scoring leads.
 
 ![rating](/images/releases/0.3.0_rating.png)
