--- a/packages/twenty-docs/docs/start/local-setup/troubleshooting.mdx
+++ b/packages/twenty-docs/docs/start/local-setup/troubleshooting.mdx
@@ -41,3 +41,7 @@ This should work out of the box with the eslint extension installed. If this doe
   "source.fixAll.eslint": "explicit"
 }
 ```
+
+## Docker container build
+
+To successfully build Docker images, ensure that your system has a minimum of 2GB of memory available. For users of Docker Desktop, please verify that you've allocated sufficient resources to Docker within the application's settings.
