--- a/packages/twenty-docs/docs/start/local-setup/yarn-setup.mdx
+++ b/packages/twenty-docs/docs/start/local-setup/yarn-setup.mdx
@@ -183,12 +183,12 @@ yarn
 
 Setup your database with the following command:
 ```bash
-yarn nx database:init twenty-server
+yarn nx database:reset twenty-server
 ```
 
 Start the server and the frontend:
 ```bash
-yarn nx start:dev twenty-server
+yarn nx start twenty-server
 yarn nx start twenty-front
 ```
 
