User guide update (#4715)
* adding back new navbar structure

* adding back new home

* adding back objects

* adding back 4 pages

* adding back some  pages

* added 3 videos for api, webhook and tasks

--- a/packages/twenty-website/src/content/user-guide/api-webhooks.mdx
+++ b/packages/twenty-website/src/content/user-guide/api-webhooks.mdx
@@ -1,5 +1,5 @@
 ---
-title: API Keys
+title: API and Wehooks
 info: Learn how to manage API keys and Webhooks in Twenty.
 icon: IconApi
 image: /images/user-guide/placeholder-header.png
@@ -24,6 +24,25 @@ For example, you can use them to retrieve details of a specific `Person` or `Com
 Since your API key gives access to sensitive information, you shouldn't share it with services you don't fully trust. If leaked, someone can use it maliciously. If your API key's security is compromised, immediately disable it and generate a new one.
 </div>
 
+<div style={{padding:'70.59% 0 0 0', position:'relative'}}>
+  <iframe 
+    src="https://player.vimeo.com/video/928786722?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
+    frameborder="0" 
+    allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
+    style={{
+      position:'absolute',
+      top:0,
+      left:0,
+      width:'100%',
+      height:'100%',
+      borderRadius: '16px', 
+      border:'2px solid black'
+    }}
+    title="Export data"
+  ></iframe>
+</div>
+<script src="https://player.vimeo.com/api/player.js"></script>
+
 
 ## Regenerating an API key
 
@@ -40,6 +59,25 @@ For instance, a webhook can alert your system in real-time when someone creates 
 1. From Settings -> Developers, click `+` Create webhook.
 2. Enter your URL.
 3. Click Save.
+
+<div style={{padding:'70.59% 0 0 0', position:'relative'}}>
+  <iframe 
+    src="https://player.vimeo.com/video/928786708?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
+    frameborder="0" 
+    allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
+    style={{
+      position:'absolute',
+      top:0,
+      left:0,
+      width:'100%',
+      height:'100%',
+      borderRadius: '16px', 
+      border:'2px solid black'
+    }}
+    title="Export data"
+  ></iframe>
+</div>
+<script src="https://player.vimeo.com/api/player.js"></script>
 
 ## Deleting Webhooks
 
