--- a/packages/twenty-website/src/content/user-guide/tasks.mdx
+++ b/packages/twenty-website/src/content/user-guide/tasks.mdx
@@ -14,6 +14,25 @@ Creating tasks in Twenty is seamless. You can either:
 -  Use the search function by pressing `cmd/ctrl + k`, then select 'Create task' from the list of quick actions.
 -  Go to a `Record page` and press `+`at the top right of the page, or go to the Task tab and press the `Add Task`button. 
 
+<div style={{padding:'70.59% 0 0 0', position:'relative'}}>
+  <iframe 
+    src="https://player.vimeo.com/video/928786754?autoplay=1&loop=1&autopause=0&background=1&amp;app_id=58479" 
+    frameborder="0" 
+    allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
+    style={{
+      position:'absolute',
+      top:0,
+      left:0,
+      width:'100%',
+      height:'100%',
+      borderRadius: '16px', 
+      border:'2px solid black'
+    }}
+    title="Export data"
+  ></iframe>
+</div>
+<script src="https://player.vimeo.com/api/player.js"></script>
+
 ## Adding Task Content
 
 Once you've created a task you can enrich it with rich content, such as Titles, Bullet points or even images. To do so, press "/" and enter the desired command.
