--- a/packages/twenty-website/src/content/user-guide/views-sort-filter.mdx
+++ b/packages/twenty-website/src/content/user-guide/views-sort-filter.mdx
@@ -1,5 +1,5 @@
 ---
-title: Views
+title: Views, Sort and Filter
 info: Find out how to create, manage and delete Object Views.
 icon: IconChecklist
 image: /images/user-guide/placeholder-header.png
