Update `twenty-front` commands (#4667)
# This PR

- Moves dev and ci scripts to the `project.json` file in the
twenty-front package
- Adds a project.json file in the root of the project with the main
start command that start both twenty-server and twenty-front
applications concurrently
- Updates the script command of the root project with the start:prod
command (replacing the start command which will be used in dev with the
help of nx)
- Add a start:prod command in the twenty-front app, replacing the start
command (now used for dev purpose)

Issue ref #4645 

@charlesBochet @FelixMalfait please let me know how can I improve it

---------

Co-authored-by: Thaïs Guigon <guigon.thais@gmail.com>

--- a/packages/twenty-docs/docs/start/local-setup/yarn-setup.mdx
+++ b/packages/twenty-docs/docs/start/local-setup/yarn-setup.mdx
@@ -191,6 +191,12 @@ yarn nx start twenty-server
 yarn nx start twenty-front
 ```
 
+Alternatively, you can start both applications at once:
+```bash
+yarn nx start
+# or
+yarn nx start twenty
+```
+
 Twenty's server will be up and running at [http://localhost:3000/graphql](http://localhost:3000/graphql).
 Twenty's frontend will be running at [http://localhost:3001](http://localhost:3001). Just login using the seeded demo account: `tim@apple.dev` (password: `Applecar2025`) to start using Twenty.
-
