fix: attempt to fix Dockerfile front build (#5020)

--- a/packages/twenty-docs/docs/start/local-setup/yarn-setup.mdx
+++ b/packages/twenty-docs/docs/start/local-setup/yarn-setup.mdx
@@ -187,15 +187,15 @@ yarn nx database:reset twenty-server
 
 Start the server and the frontend:
 ```bash
-yarn nx start twenty-server
-yarn nx start twenty-front
+npx nx start twenty-server
+npx nx start twenty-front
 ```
 
 Alternatively, you can start both applications at once:
 ```bash
-yarn nx start
+npx nx start
 # or
-yarn nx start twenty
+npx nx start twenty
 ```
 
 Twenty's server will be up and running at [http://localhost:3000/graphql](http://localhost:3000/graphql).
