fix: fix root start script (#5032)
Fixes #5022

See https://nx.dev/recipes/running-tasks/root-level-scripts#setup

--- a/packages/twenty-docs/docs/start/local-setup/yarn-setup.mdx
+++ b/packages/twenty-docs/docs/start/local-setup/yarn-setup.mdx
@@ -182,7 +182,7 @@ yarn
 
 Setup your database with the following command:
 ```bash
-yarn nx database:reset twenty-server
+npx nx database:reset twenty-server
 ```
 
 Start the server and the frontend:
